<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Diablo 3 App</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="string_textview_title">D3 App!</string>
    <string name="hint_edittext_username">Enter your username</string>
    <string name="hint_edittext_password">Enter your password</string>
    <string name="string_button_login">Login</string>
    <string name="string_button_register">Register</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="string_textview_register_title">Register a New Account!</string>
    <string name="hint_edittext_confirm_password">Confirm your password</string>
    <string name="string_button_done">Done</string>
    <string name="string_textview_main_title">Main Menu</string>
    <string name="string_button_friends">Friends List</string>
    <string name="string_button_characters">View Your Characters</string>
    <string name="string_button_game">Scroll of Identify</string>
    <string name="title_activity_friend">FriendActivity</string>
    <string name="string_textview_friend_title">Friends</string>
    <string name="hint_edittext_friend">Battletag#number</string>
    <string name="string_button_add">Add</string>
    <string name="string_textview_label_username">Username</string>
    <string name="string_textview_label_paragon">Paragon</string>
    <string name="title_activity_character_list">CharacterListActivity</string>
    <string name="string_textview_characterlist_title">Character List</string>
    <string name="string_button_logout">Logout</string>
    <string name="title_activity_game_menu">GameMenuActivity</string>
    <string name="string_textview_game_menu_title">Game Menu</string>
    <string name="string_button_learning_mode">Game Learning Mode</string>
    <string name="string_button_ranked_mode">Game Ranked Mode</string>
    <string name="string_button_leaderboard">Game Leaderboards</string>
    <string name="title_activity_learning_game">LearningGameActivity</string>
    <string name="string_textview_learning_game_title">Learning Mode</string>
    <string name="string_button_submit">Submit</string>
    <string name="string_textview_bnet_username">Format: username-number</string>
    <string name="hint_edittext_battlenet_username">Enter your battle.net username and tag</string>
    <string name="title_activity_character_sheet">CharacterSheetActivity</string>
    <string name="string_textview_charactersheet_title">Character Info</string>
    <string name="title_activity_leaderboard">LeaderboardActivity</string>
    <string name="string_leaderboard_title">Leaderboard</string>
    <string name="string_edittext_leaderboard_search">Search for a player...</string>
    <string name="string_confirm">Confirm</string>
    <string name="string_battlenet_username">Battle.Net Username</string>
    <string name="string_textview_label_bnetusername">Battle.net Username</string>
    <string name="string_textview_label_character_class">Character Class</string>
    <string name="string_textview_label_character_name">Character Name</string>
    <string name="string_textview_label_rank">Rank</string>
    <string name="string_textview_label_highscore">Highscore</string>
    <string name="action_main_menu">Main Menu</string>
    <string name="action_logout">Logout</string>

</resources>

