<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context="com.example.eddoson.diablo3app.RegisterActivity">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editTextRegisterUsername"
        android:hint="@string/hint_edittext_username"
        android:layout_above="@+id/editTextRegisterPassword"
        android:layout_alignParentRight="true"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editTextRegisterPassword"
        android:hint="@string/hint_edittext_password"
        android:layout_above="@+id/editTextRegisterConfirmPassword"
        android:layout_alignParentRight="true"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editTextRegisterConfirmPassword"
        android:layout_alignParentEnd="true"
        android:hint="@string/hint_edittext_confirm_password"
        android:layout_above="@+id/textViewBnetUsernameHint"
        android:layout_alignParentRight="true"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/string_button_done"
        android:id="@+id/buttonDone"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/string_textview_register_title"
        android:id="@+id/textViewRegisterTitle"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editTextBnetUsername"
        android:hint="@string/hint_edittext_battlenet_username"
        android:layout_above="@+id/buttonDone"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/string_textview_bnet_username"
        android:id="@+id/textViewBnetUsernameHint"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/editTextBnetUsername"
        android:layout_alignParentRight="true"/>
</RelativeLayout>
