<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context="com.example.eddoson.diablo3app.LoginActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/string_textview_title"
        android:id="@+id/textViewTitle"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editTextLoginUsername"
        android:layout_below="@+id/textViewTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="178dp"
        android:hint="@string/hint_edittext_username"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editTextLoginPassword"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:hint="@string/hint_edittext_password"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/string_button_login"
        android:id="@+id/buttonLogin"
        android:layout_below="@+id/editTextLoginPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="47dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/string_button_register"
        android:id="@+id/buttonRegister"
        android:layout_below="@+id/buttonLogin"
        android:layout_centerHorizontal="true"/>
</RelativeLayout>
