<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/string_textview_main_title"
        android:id="@+id/textViewMainTitle"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/linearLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Large Text"
            android:id="@+id/textViewLoggedInAs"
            android:gravity="center_horizontal"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_weight="3"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/textViewMainTitle"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/linearLayout">

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/string_button_friends"
            android:id="@+id/buttonFriends"
            android:layout_below="@+id/textViewMainTitle"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_weight="1"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/string_button_characters"
            android:id="@+id/buttonCharacters"
            android:layout_below="@+id/buttonGame"
            android:layout_alignParentLeft="true"
            android:layout_weight="1"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/string_button_learning_mode"
            android:id="@+id/buttonLearningMode"
            android:layout_weight="1"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/string_button_ranked_mode"
            android:id="@+id/buttonRankedMode"
            android:layout_weight="1"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/string_button_leaderboard"
            android:id="@+id/buttonLeaderboard"
            android:layout_weight="1"/>

    </LinearLayout>

</RelativeLayout>
