<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context="com.example.eddoson.diablo3app.FriendActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/string_textview_friend_title"
        android:id="@+id/textViewFriendActivityTitle"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editTextFriend"
        android:layout_alignBottom="@+id/buttonAdd"
        android:layout_toLeftOf="@+id/buttonAdd"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="@string/hint_edittext_friend"
        />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_button_add"
        android:id="@+id/buttonAdd"
        android:layout_below="@+id/textViewFriendActivityTitle"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonAdd"
        android:layout_centerHorizontal="true"
        android:id="@+id/linearLayoutListHeader"
        android:minHeight="@dimen/list_view_height">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/string_textview_label_username"
            android:id="@+id/textViewHeaderUsername"
            android:layout_weight="1"
            android:textColor="#FFFFFFFF"
            android:minHeight="@dimen/list_view_height"
            android:textSize="@dimen/list_view_text_size"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/string_textview_label_bnetusername"
            android:id="@+id/textViewHeaderBnetUsername"
            android:layout_weight="1"
            android:textColor="#FFFFFFFF"
            android:minHeight="@dimen/list_view_height"
            android:textSize="@dimen/list_view_text_size"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/string_textview_label_paragon"
            android:id="@+id/textViewHeaderParagon"
            android:layout_weight="1"
            android:textColor="#FFFFFFFF"
            android:minHeight="@dimen/list_view_height"
            android:textSize="@dimen/list_view_text_size"
            android:textStyle="bold"/>
    </LinearLayout>

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/listViewFriends"
        android:layout_below="@+id/linearLayoutListHeader"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>
