<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context="com.example.eddoson.diablo3app.GameMenuActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/string_textview_game_menu_title"
        android:id="@+id/textViewGameMenuTitle"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/textViewGameMenuTitle"
        android:layout_centerHorizontal="true">

        <Button
            android:layout_width="match_parent"
            android:layout_height="269dp"
            android:text="@string/string_button_learning_mode"
            android:id="@+id/buttonGameLearningMode"
            android:layout_below="@+id/textViewGameMenuTitle"
            android:layout_centerHorizontal="true"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/string_button_ranked_mode"
            android:id="@+id/buttonGameRankedMode"
            android:layout_below="@+id/buttonGameLearningMode"
            android:layout_centerHorizontal="true"
            android:layout_weight="1"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/string_button_leaderboard"
            android:id="@+id/buttonGameLeaderboard"
            android:layout_below="@+id/buttonGameRankedMode"
            android:layout_centerHorizontal="true"
            android:layout_weight="1"/>
    </LinearLayout>
</RelativeLayout>
