<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context="com.example.eddoson.diablo3app.LeaderboardActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/string_leaderboard_title"
        android:id="@+id/textViewLeaderboardTitle"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Large Text"
        android:id="@+id/textViewUsernameAndRank"
        android:layout_below="@+id/textViewLeaderboardTitle"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewUsernameAndRank"
        android:layout_centerHorizontal="true"
        android:id="@+id/linearLayoutSearchWrapper"
        >

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/editTextSearch"
            android:layout_weight="15"
            android:hint="@string/string_edittext_leaderboard_search"/>

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_confirm"
            android:id="@+id/buttonConfirmSearch"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayoutSearchWrapper"
        android:layout_centerHorizontal="true"
        android:id="@+id/linearLayoutLeaderboardLabels"
        android:minHeight="@dimen/list_view_height">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/string_textview_label_rank"
            android:id="@+id/textViewLabelRank"
            android:layout_weight="1"
            android:textColor="#FF000000"
            android:minHeight="@dimen/list_view_height"
            android:textSize="@dimen/list_view_text_size"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/string_textview_label_username"
            android:id="@+id/textViewLabelUsername"
            android:layout_weight="1"
            android:textColor="#FF000000"
            android:minHeight="@dimen/list_view_height"
            android:textSize="@dimen/list_view_text_size"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/string_textview_label_highscore"
            android:id="@+id/textViewLabelHighscore"
            android:layout_weight="1"
            android:textColor="#FF000000"
            android:minHeight="@dimen/list_view_height"
            android:textSize="@dimen/list_view_text_size"/>
    </LinearLayout>

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/listViewLeaderboard"
        android:layout_below="@+id/linearLayoutLeaderboardLabels"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>
